# EPZ-Bot

./: #index.js#  .gitignore  Dockerfile  LICENSE  README.md  compose.yml  default-config.json  deploy-commands.ts  index.ts  package-lock.json  package-lock.sync-conflict-20250320-110235-VX6QOQO.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
.github/workflows/: docker-image.yml  node.js.yml  python-app.yml
commands/utility/: add-channel.ts
config/: default-config.json  logging.yml
lib/: config.ts  database.ts  types.ts  utils.ts
src/: __main___.py  cli.py  default-config.json  epz_bot.py  index.ts
src/commands/utility/: add-channel.ts
src/epz_bot/: cli.py  epz_bot.py
src/epz_bot/lib/: client.py  config.py  database.py  log.py  utils.py
src/lib/: client.py  config.py  config.ts  database.py  database.ts  log.py  types.ts  utils.py  utils.ts
src/test/: test_config.py
