[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project]
name = "epz_bot"
version = "4.2.2"
authors = [
    { name="Mara Wörle", email="mail@m-woerle.de" },
]
description = "A small Discord Bot to write into a Database"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]
dependencies = [
    "mariadb==1.1.12",
    "discord.py==2.5.2",
    "typer==0.15.2",
    "pyyaml==6.0.2",
]


[project.scripts]
start = "cli:app"

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.pylint]
max-line-length=120
disable = [
    "C0114",
    "C0115",
    "C0116",
]